Add semi-colons in Less files.
Change-Id: Ibdc374c019a2e3e813cda9d59e99f334004678b2
Closes-bug: #1311194

--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -252,7 +252,7 @@ a.current_item:hover {
 
 a.current_item:hover h3, a.current_item:hover h4 {
     color: @link-hover-color;
-    .border-radius(4px)
+    .border-radius(4px);
 }
 
 .sidebar .switcher_bar {
