--- a/openstack_dashboard/static/dashboard/less/horizon_charts.less
+++ b/openstack_dashboard/static/dashboard/less/horizon_charts.less
@@ -107,9 +107,9 @@
         min-height: @min_height_fullscreen_chart;
         min-width: @min_width_fullscreen_chart;
         .detail {
-            .x_label { display: none }
-            .item { line-height: 1.4; padding: 0.5em }
-            .date { color: #a0a0a0 }
+            .x_label { display: none; }
+            .item { line-height: 1.4; padding: 0.5em; }
+            .date { color: #a0a0a0; }
         }
         .modal-backdrop {
             position: absolute;
@@ -120,7 +120,7 @@
             min-width: @min_width_fullscreen_chart;
         }
         svg {
-            padding: 0 0 5px 0
+            padding: 0 0 5px 0;
         }
     }
 
