--- a/horizon/templates/horizon/common/_data_table.html
+++ b/horizon/templates/horizon/common/_data_table.html
@@ -61,9 +61,14 @@
       <tr>
         <td colspan="{{ table.get_columns|length }}">
           <span class="table_count">{% blocktrans count counter=rows|length %}Displaying {{ counter }} item{% plural %}Displaying {{ counter }} items{% endblocktrans %}</span>
+          {% if table.has_prev_data or table.has_more_data %}
+            <span class="spacer">|</span>
+          {% endif %}
+          {% if table.has_prev_data %}
+            <a href="?{{ table.get_prev_pagination_string }}">{% trans "&laquo;&nbsp;Prev" %}</a>
+          {% endif %}
           {% if table.has_more_data %}
-          <span class="spacer">|</span>
-          <a href="?{{ table.get_pagination_string }}">{% trans "More&nbsp;&raquo;" %}</a>
+            <a href="?{{ table.get_pagination_string }}">{% trans "More&nbsp;&raquo;" %}</a>
           {% endif %}
         </td>
       </tr>
