--- a/horizon/templates/horizon/_conf.html
+++ b/horizon/templates/horizon/_conf.html
@@ -1,12 +1,13 @@
 {% load compress %}
-
 {% compress js %}
-
 <script src='{{ STATIC_URL }}horizon/lib/jquery/jquery.js' type='text/javascript' charset="utf-8"></script>
 <script src="{{ STATIC_URL }}horizon/lib/angular/angular.js" type="text/javascript" charset="utf-8"></script>
 
-
 <script src='{{ STATIC_URL }}horizon/js/horizon.js' type='text/javascript' charset='utf-8'></script>
+<script type='text/javascript' charset='utf-8'>
+    /* Load angular modules extensions list before we include angular/horizon.js */
+    var angularModuleExtension = {{ HORIZON_CONFIG.angular_modules|default:"[]"|safe }};
+</script>
 <script src='{{ STATIC_URL }}horizon/js/angular/horizon.js' type='text/javascript' charset='utf-8'></script>
 <script type='text/javascript' charset='utf-8'>
 /* Storage for backend configuration variables which the frontend
