Fix hide drop_arrow.png if only one tenant
when user only in one tenant, the tenant region show drop_arrow.png,
this will confuse user. It needs to hide.

Closes-bug:#1316471

Change-Id: I9f1fefcc6a23e6e6a555a59df6ae7f50d65edbe2

--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -112,6 +112,10 @@ dt {
   display: inline;
 }
 
+.hide_image {
+  background-image: none !important;
+}
+
 #profile_editor_switcher {
   width:auto;
   max-width: 200px;
