volume details page does not show source image details
Cinder volume details page is updated to show the image
details if the volume is created from the image.

Change-Id: I5d7a06cb18a39c4a252c58fabf3b7187f337fb44
Closes-bug: #1317041

--- a/openstack_dashboard/dashboards/project/volumes/templates/volumes/volumes/_detail_overview.html
+++ b/openstack_dashboard/dashboards/project/volumes/templates/volumes/volumes/_detail_overview.html
@@ -49,6 +49,20 @@
   </dl>
 </div>
 
+{% if volume.volume_image_metadata %}
+<div class="status row-fluid detail">
+  <h4>{% trans "Volume Source" %}</h4>
+  <hr class="header_rule">
+  <dl>
+      <dt>{% trans "Image" %}</dt>
+      <dd>
+        {% url 'horizon:project:images:images:detail' volume.volume_image_metadata.image_id as image_url%}
+        <a href="{{ image_url }}">{{ volume.volume_image_metadata.image_name }}</a>
+      </dd>
+  </dl>
+</div>
+{% endif %}
+
 <div class="status row-fluid detail">
   <h4>{% trans "Metadata" %}</h4>
   <hr class="header_rule">
