Fix Instance Image Name cell value
It shows up differently in Project vs Admin table for instance with no image.
Project table shows '-'
Admin table shows '(not found)'
=> Now both tables show '-' as it is consistent with other tables

Also, in the Instance detail page, Image Name shows as a hyperlinked "(not found)"
=> Now the detail page shows a plain text 'None'

Change-Id: Ie865017d4fdd6c5d6e028d9e3bf94dd67c21daca
Closes-Bug: #1277240

--- a/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_overview.html
+++ b/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_overview.html
@@ -102,7 +102,13 @@
     {% endwith %}
     {% url 'horizon:project:images:images:detail' instance.image.id as image_url %}
     <dt>{% trans "Image Name" %}</dt>
-    <dd><a href="{{ image_url }}">{{ instance.image_name }}</a></dd>
+    <dd>
+      {% if instance.image %}
+        <a href="{{ image_url }}">{{ instance.image_name }}</a>
+      {% else %}
+        <em>{% trans "None" %}</em>
+      {% endif %}
+    </dd>
     {% with default_item_value="<em>"|add:_("N/A")|add:"</em>" %}
     {% for key, value in instance.metadata.items %}
     <dt>{{ key|force_escape }}</dt>
