Making compute services status fields consistent
Other tabs in the system info view have status and state values
capitalized. Adding capitalization to make compute services tab
consistent.

Closes-Bug: #1324720

Change-Id: I1db8dca82e301c9393bf34a403cd4dfbd7021871

--- a/openstack_dashboard/dashboards/admin/info/templates/info/_cell_status.html
+++ b/openstack_dashboard/dashboards/admin/info/templates/info/_cell_status.html
@@ -1,5 +1,5 @@
 {% load i18n %}
-{{ status }}
+{{ status|title }}
 {% if status == 'disabled' and disabled_reason %}
 <br/><i>{% trans "Reason" %}: {{ disabled_reason }}</i>
 {% endif %}
