UX improvements for Launch Instance dialog
This patch solves two UX issues on the Networking tab
of Launch Instance dialog:

1) "nic" is lowercase when the acronyms usually are capitalized.
2) "Selected Networks" and "Available networks" do not follow
the same capitalization convention.

Change-Id: If83f605dc2ebbfd408811634da2bad231356f057
Closes-Bug: #1325684

--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -2039,7 +2039,7 @@ label.log-length {
     }
   }
   li:before {
-    content:"nic:"counter(v1);
+    content:"NIC:"counter(v1);
     counter-increment:v1;
     display: inline-block;
     margin-right: 5px;
@@ -2054,7 +2054,7 @@ label.log-length {
   }
   &.dragging {
     li:before {
-      content:"nic:";
+      content:"NIC:";
       background-color:rgba(102,102,102,0.5);
       padding-right: 10px;
     }
