Images table/detail view term consistency
Table uses Yes/No in Public and Protected columns
Detail View uses True/False

=> Make Detail View say Yes/No too

Change-Id: Ib6852be79613ae4deea602c2ee42e036f0fed517
Closes-Bug: #1325138

--- a/openstack_dashboard/dashboards/project/images/templates/images/images/_detail_overview.html
+++ b/openstack_dashboard/dashboards/project/images/templates/images/images/_detail_overview.html
@@ -17,9 +17,9 @@
     <dt>{% trans "Status" %}</dt>
     <dd>{{ image.status|default:_("Unknown")|title }}</dd>
     <dt>{% trans "Public" %}</dt>
-    <dd>{{ image.is_public }}</dd>
+    <dd>{{ image.is_public|yesno|capfirst }}</dd>
     <dt>{% trans "Protected" %}</dt>
-    <dd>{{ image.protected }}</dd>
+    <dd>{{ image.protected|yesno|capfirst }}</dd>
     <dt>{% trans "Checksum" %}</dt>
     <dd>{{ image.checksum }}</dd>
     <dt>{% trans "Created" %}</dt>
