Make distinction for disabled text field in membership step
Right now, on the Create Flavor modal > Flavor Access tab,
you see two text fields.  Whether on not they are disabled, they
look the same unless you hover over it (to see a red cancel
cursor).

This patch shows an immediate visual distinction between
disabled/enabled text fields for membership text fields
(also used in Create Project modal > Project Members).

Change-Id: I15c83ff2cf2fb125dfbf368d2a2be637ab69dab0
Closes-Bug: #1325666

--- a/openstack_dashboard/static/dashboard/scss/horizon.scss
+++ b/openstack_dashboard/static/dashboard/scss/horizon.scss
@@ -1700,7 +1700,10 @@ label.log-length {
     float: left;
   }
   input {
-    background: url(/static/dashboard/img/search.png) no-repeat 105px 5px whiteSmoke;
+    background: url(/static/dashboard/img/search.png) no-repeat 105px 5px;
+  }
+  input[type="text"]:disabled {
+    background: url(/static/dashboard/img/search.png) no-repeat 105px 5px $gray-lighter;
   }
   .fake_table_header {
     background-color: $body-bg;
