Display Horizon version number in System Info page
This patch adds the Horizon version number at the bottom of System
Info page.

Change-Id: I81514d1c99a32cd8161a65535638c235c2cfc317
Closes-Bug: #1261431

--- a/openstack_dashboard/dashboards/admin/info/templates/info/index.html
+++ b/openstack_dashboard/dashboards/admin/info/templates/info/index.html
@@ -11,5 +11,9 @@
   <div class="span12">
     {{ tab_group.render }}
   </div>
+  <div class="version_label">
+      {% blocktrans with version_info=version %}Version: {{version_info}}
+      {% endblocktrans %}
+  </div>
 </div>
 {% endblock %}
