--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -1540,6 +1540,12 @@ div .flavor_table {
   margin-bottom: 0;
 }
 
+.version_label {
+  position: absolute;
+  right: 1px;
+  bottom: 0px;
+}
+
 .header_rule {
   margin: 0 0 10px;
 }
