User signup/signin in newly designed jio-dashboard
Port to master the new user signup, change password, phone number, email
addressed in below blueprints in havana_jio_dashboard branch:
https://blueprints.launchpad.net/jio/+spec/user-registration
https://blueprints.launchpad.net/jio/+spec/change-password
https://blueprints.launchpad.net/jio/+spec/change-phone-number
https://blueprints.launchpad.net/jio/+spec/change-email

P.S.
* The change-* functionalities were implemented using customization modules
in havana_jio_dashboard w.r.t the below URL:
http://docs.openstack.org/developer/horizon/topics/customizing.html
Now, they are implemented as plugins w.r.t the below upstream blueprint
https://blueprints.launchpad.net/horizon/+spec/plugin-panel-config

* User registration feature related URLs loading is slightly modified to avoid
modifications to openstack_dashboard.urls.py file. Instead, a new file
horizon_jiocloud/root_urls.py is added. So, for those urls to work,
add below entry in local_settings.py file
ROOT_URLCONF='horizon_jiocloud.root_urls'

The intention is to avoid as much changes as possible to core files in master
so that rebasing with upstream master is less painful.

Implements: blueprint icehouse-based-jiodashboard
Implements: blueprint user-signup-signin-new-jio-dashboard

--- a/horizon/templates/auth/_login.html
+++ b/horizon/templates/auth/_login.html
@@ -29,5 +29,6 @@
 {% endblock %}
 
 {% block modal-footer %}
+  <a href="{% url 'horizon_jiocloud:signup' %}">Register</a>
   <button type="submit" class="btn btn-primary pull-right">{% trans "Sign In" %}</button>
 {% endblock %}
