Make the More link translatable
The More link for table pagination is not translated.  It should
be.

Change-Id: Ie342352ad25bdaebe3a9d3885c84bf034ecd49d0
Closes-Bug: #1334766

--- a/horizon/templates/horizon/common/_data_table.html
+++ b/horizon/templates/horizon/common/_data_table.html
@@ -63,7 +63,7 @@
           <span class="table_count">{% blocktrans count counter=rows|length %}Displaying {{ counter }} item{% plural %}Displaying {{ counter }} items{% endblocktrans %}</span>
           {% if table.has_more_data %}
           <span class="spacer">|</span>
-          <a href="?{{ table.get_pagination_string }}">More&nbsp;&raquo;</a>
+          <a href="?{{ table.get_pagination_string }}">{% trans "More&nbsp;&raquo;" %}</a>
           {% endif %}
         </td>
       </tr>
