Container:improve 'Copy Object' help description
Modified the sentence as per the triaged hint.

Change-Id: Ic52f689e8bfab7233cbeaad0897c2ee492027ffd
Closes-bug: #1334474

--- a/openstack_dashboard/dashboards/project/containers/templates/containers/_copy.html
+++ b/openstack_dashboard/dashboards/project/containers/templates/containers/_copy.html
@@ -15,7 +15,7 @@
 </div>
 <div class="right">
     <h3>{% trans "Description" %}:</h3>
-    <p>{% trans "Make a new copy of an existing object to store in this or another container. You may also specify a path at which the new copy should live inside of the selected container." %}</p>
+    <p>{% trans "Make a new copy of an existing object to store in this or another container. You may additionally specify the path within the selected container where the new copy should be stored." %}</p>
 </div>
 {% endblock %}
 
