--- a/horizon/templates/horizon/common/_workflow_step_update_members.html
+++ b/horizon/templates/horizon/common/_workflow_step_update_members.html
@@ -2,7 +2,7 @@
 
 <noscript><h3>{{ step }}</h3></noscript>
 
-<div class="membership {{ step.slug }}_membership" data-show-roles="{{ step.show_roles }}">
+<div class="membership {{ step.slug }}_membership dropdown_fix" data-show-roles="{{ step.show_roles }}">
   <div class="header">
     <div class="help_text">{{ step.help_text }}</div>
     <div class="left">
