horizon_workflow.scss could be more scss-like
horizon_workflow.scss is currently pretty much css.  There's some
semi-sophisticated css in there (the arrows) and it would be improved
with some variable usage and more nesting.

Based on my previous less-ify here:
https://review.openstack.org/#/c/82209/

NOTE: I've verified that the resulting .css file is exactly the same as
before.

NOTE 2: Per Maxime's suggestion, I've moved the variable declarations
into the _variables.scss file, and changed the format of a few of them.
The resulting .css file is now slightly different but only because
"white" is different from "#ffffff"

Change-Id: Ie31de779285c5f417c9cd7c8edc7ff5e7b527f5e
Closes-Bug: 1295847

--- a/openstack_dashboard/static/dashboard/scss/_variables.scss
+++ b/openstack_dashboard/static/dashboard/scss/_variables.scss
@@ -10,7 +10,7 @@ $brand-info: #5bc0de;
 $brand-warning: #f0ad4e;
 $brand-danger: #d9534f;
 
-$body-bg: white;
+$body-bg: #ffffff;
 
 $text-color: $gray-dark;
 
@@ -24,3 +24,17 @@ $headings-color: $gray-dark;
 $table-border-color: $border-color;
 $table-bg-hover: #f5f5f5;
 $table-bg-odd: #f9f9f9;
+
+// Workflows
+$workflow-color-tab-complete-bg: #007acc;
+$workflow-color-tab-incomplete-bg: #dddddd;
+$workflow-color-tab-trough-bg: #efefef;
+$workflow-color-tab-border: #ffffff;
+$workflow-color-tab-link-active: #ffffff;
+$workflow-color-tab-link-inactive: #43a4d7;
+
+$workflow-color-label-error: $brand-danger;
+
+$workflow-size-tab-border: 2px;
+$workflow-size-tab-arrow: 20px;
+$workflow-size-tab-padding: 15px;
